fixed all ui butttons and alignment

--- a/static/files/css/forms.css
+++ b/static/files/css/forms.css
@@ -155,8 +155,8 @@ input[type="number"],
 textarea,
 select {
     display: block;
-    width: 50%;
-    padding: 0.5rem 20px;
+    width: 85%;
+    padding: 0.5rem 4px;
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5rem;
@@ -172,12 +172,13 @@ select {
 form .aligned table p {
     margin-left: 0;
     padding-left: 0;
+    display: -webkit-inline-box;    
 }
 
 .aligned .vCheckboxLabel {
     float: none;
     width: auto;
-    display: inline-block;
+    display: inline-table;
     /*vertical-align: -3px;*/
     /*padding: 0 0 5px 5px;*/
 }
@@ -692,7 +693,7 @@ form .related-widget-wrapper ul {
 }
 
 #change-history, .module{
-    margin-top: 4%;
+    /* margin-top: 4%; */
 }
 
 #clear-filter-button{
