--- a/static/files/css/widgets.css
+++ b/static/files/css/widgets.css
@@ -568,7 +568,8 @@ ul.timelist, .timelist li {
 .related-widget-wrapper {
     float: left;       /* display properly in form rows with multiple fields */
     overflow: hidden;  /* clear floated contents */
-    margin-top: 14%;
+    display: flex;
+    align-items: center;
 }
 
 .related-widget-wrapper-link {
